--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.echolauncher">
 
+    <!-- For getting apps-->
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"
         tools:ignore="QueryAllPackagesPermission" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!-- For accessing weather data-->
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +16,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.EchoLauncher">
+        android:theme="@style/Theme.EchoLauncher"
+        android:usesCleartextTraffic="true">
         <activity android:name=".MainActivity"
             android:launchMode="singleTask"
             android:stateNotNeeded="true">
@@ -38,5 +42,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
