--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation "androidx.fragment:fragment:$fragment_version"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
     implementation "com.squareup.okhttp3:okhttp:4.9.0"
+    implementation "com.google.android.flexbox:flexbox:3.0.0"
 }
